// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message close demo works fine 1`] = `
<div class="t-demo-message">
  <div class="t-message t-is-info t-is-closable"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-info-circle-filled">
      <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"></path>
    </svg>点击关闭按钮触发事件 close-btn-click <span class="t-message-close"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-close"><path d="M512.0032 570.83072L708.864 767.6864 767.6928 708.8576 570.83456 511.99936 767.6928 315.14176 708.864 256.3104 512.0032 453.168 315.14368 256.30848 256.31232 315.13984 453.17184 511.99936 256.31232 708.8576 315.14368 767.6928 512.0032 570.83072Z"></path></svg></span></div>
  <div class="t-message t-is-info t-is-closable"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-info-circle-filled">
      <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"></path>
    </svg>自定义关闭按钮（文字）<span class="t-message-close">关闭</span></div>
  <div class="t-message t-is-info t-is-closable"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-info-circle-filled">
      <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"></path>
    </svg>自定义关闭按钮（函数）<span class="t-message-close"><div class="t-message-close"><b>x</b></div></span></div>
  <div class="t-message t-is-info t-is-closable"><svg viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" class="t-icon t-icon-info-circle-filled">
      <path fill-opacity=".9" fill-rule="evenodd" d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"></path>
    </svg>
    自定义关闭按钮（插槽）
    <span class="t-message-close"><div class="t-message-close"><b>x</b></div></span>
  </div>
</div>
`;

exports[`Message closeAll demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      点击打开多个消息
    </span>
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    id="t-demo-msg-close-all"
    type="button"
  >
    <span
      class="t-button__text"
    >
      点击关闭所有消息
    </span>
  </button>
</div>
`;

exports[`Message placement demo works fine 1`] = `
<div>
  <div
    class="t-message-offset"
  >
    <div
      class="t-input t-size-m"
    >
      <input
        class="t-input__inner"
        placeholder="请输入横向偏移量"
        type="text"
      />
    </div>
     
    <div
      class="t-input t-size-m"
    >
      <input
        class="t-input__inner"
        placeholder="请输入纵向偏移量"
        type="text"
      />
    </div>
  </div>
   
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      center
    </span>
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      top
    </span>
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      left
    </span>
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      right
    </span>
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      bottom
    </span>
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      top-left
    </span>
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      top-right
    </span>
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      bottom-left
    </span>
  </button>
   
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      bottom-right
    </span>
  </button>
</div>
`;

exports[`Message plugin demo works fine 1`] = `
<div>
  <p>
    插件调用
  </p>
   
  <br />
   
  <div
    class="t-demo-message-duration"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        info
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        success
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        warning
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        error
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        question
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        loading
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        close all
      </span>
    </button>
  </div>
   
  <br />
  <br />
   
  <p>
    函数式调用
  </p>
   
  <br />
   
  <div
    class="t-demo-message-theme"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        info
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        success
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        warning
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        error
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        question
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        loading
      </span>
    </button>
     
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        close all
      </span>
    </button>
  </div>
   
  <br />
  <br />
</div>
`;

exports[`Message toggle demo works fine 1`] = `
<div
  id="t-demo-message-toggle"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
    自由控制关闭时机（打开）
  
    </span>
  </button>
</div>
`;

exports[`Message type demo works fine 1`] = `
<div
  class="t-demo-message"
>
  <div
    class="t-message t-is-info"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 416L416 416 416 480 480 480 480 736 608 736 608 672 544 672 544 416ZM544 288L480 288 480 352 544 352 544 288Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    用户表示普通操作信息提示
    <span
      class="t-message-close"
    />
  </div>
   
  <div
    class="t-message t-is-success"
  >
    <svg
      class="t-icon t-icon-check-circle-filled"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM690.8655168 353.58818368L464.56401024 579.82818368 328.82684416 444.09785152 283.57201024 489.35268544 464.59134592 670.3720192 509.84617984 625.1171872 736.120352 398.8430176 690.8655168 353.58818368Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    用户表示操作顺利达成
    <span
      class="t-message-close"
    />
  </div>
   
  <div
    class="t-message t-is-warning"
  >
    <svg
      class="t-icon t-icon-error-circle-filled"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    用户表示操作引起一定后果
    <span
      class="t-message-close"
    />
  </div>
   
  <div
    class="t-message t-is-error"
  >
    <svg
      class="t-icon t-icon-error-circle-filled"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM544 288L480 288 480 608 544 608 544 288Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    用户表示操作引起严重的后果
    <span
      class="t-message-close"
    />
  </div>
   
  <div
    class="t-message t-is-question"
  >
    <svg
      class="t-icon t-icon-help-circle-filled"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M512 96C741.7504576 96 928 282.24954432 928 512 928 741.7504576 741.7504576 928 512 928 282.24954432 928 96 741.7504576 96 512 96 282.24954432 282.24954432 96 512 96ZM544 672L480 672 480 736 544 736 544 672ZM511.94934848 316.79357824C455.376064 315.90376256 403.89780352 354.22768704 388.246704 407.6169056 385.3298528 417.56690432 384 431.38724224 384 442.58695936L384 442.58695936 448.25864064 442.58695936 448.4281024 436.88934272C448.7590048 430.9195872 449.55016384 424.503648 450.58499584 420.97361536 459.7961696 389.55235008 478.19034496 380.3909248 512 380.3909248 547.8533504 380.3909248 575.80742976 397.67644416 576.43752576 442.25242048 576.87187904 472.9806432 572.34315648 486.03252928 539.69683072 517.6924928L539.69683072 517.6924928 529.43594048 527.7943712C493.105152 564.48261312 479.84877568 594.00480064 479.84877568 640L479.84877568 640 544.14543296 639.97426496 544.33294784 632.61727168C545.85718848 604.2392832 550.12829504 587.77674496 581.23240896 557.61406016L581.23240896 557.61406016 591.32161984 547.68326784C626.86304896 511.80632384 640.6040192 486.41802816 639.97972736 442.25242048 638.94855808 369.30255552 580.86566208 317.87753152 511.94934848 316.79357824Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    用于帮助用户操作的信息提示
    <span
      class="t-message-close"
    />
  </div>
   
  <div
    class="t-message t-is-loading"
  >
    <svg
      class="t-icon t-icon-loading"
      version="1.1"
      viewBox="0 0 1024 1024"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M96 512C96 282.264 282.264 96 512 96 741.736 96 928 282.264 928 512L824 512 824 512C824 339.68715776 684.3128448 200 512 200 339.68715776 200 200 339.68715776 200 512 200 684.3128448 339.68715776 824 512 824L512 928C282.264 928 96 741.736 96 512Z"
        fill-opacity=".9"
        fill-rule="evenodd"
      />
    </svg>
    用于表示操作正在生效的过程中
    <span
      class="t-message-close"
    />
  </div>
</div>
`;
